--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@ last_name: Vergel de Dios
 contact_note: >
   Email or LinkedIn is probably best?
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  The personal blog of Julian Vergel de Dios AKA the Flying Burrito.
+  The personal blog of Julian Vergel de Dios AKA Flying Burrito.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.dev" target="_blank">Cloudflare Pages</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
+keywords: software, startups, entrepreneurship, hobbies # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: favicon.ico # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
@@ -63,7 +63,7 @@ max_width: 930px
 # -----------------------------------------------------------------------------
 # Display links to the page with a preview object on social media.
 # see https://schema.org/docs/faq.html for more information
-serve_og_meta: false # Include Open Graph meta tags in the HTML head
+serve_og_meta: true # Include Open Graph meta tags in the HTML head
 serve_schema_org: false # Include Schema.org in the HTML head
 og_image: # The site-wide (default for all links) Open Graph preview image
 
